scrollbar fix

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,8 +6,8 @@
     font-family: 'Roboto', sans-serif;
 }
 
-body{
-  padding-bottom: 100px;
+body {
+    padding-bottom: 100px;
 }
 
 .container_bc {
@@ -185,15 +185,15 @@ body{
 }
 
 .breadcrumb li:first-child a {
-  padding-left: 10px;
+    padding-left: 10px;
 }
 
-.breadcrumb li:not(:first-child) a{
-  background:        lightgray;
+.breadcrumb li:not(:first-child) a {
+    background: lightgray;
 }
 
-.breadcrumb li:not(:first-child) a:after{
-  border-left-color: lightgray;
+.breadcrumb li:not(:first-child) a:after {
+    border-left-color: lightgray;
     padding-left: 10px;
 }
 
@@ -540,7 +540,7 @@ img.boeken {
     border-radius: 50px;
     height: 700px;
     overflow: auto;
-    width: 96%;
+    width: 100%;
     left: 0px;
 }
 
@@ -637,15 +637,15 @@ h1 {
     border-radius: 50px;
 }
 
-.background-blue{
+.background-blue {
     background-color: lightblue;
 }
 
-.background-red{
+.background-red {
     background-color: rgb(248, 81, 81);
 }
 
-.background-oranje{
+.background-oranje {
     background-color: rgb(255, 191, 72);
 }
 
@@ -657,11 +657,13 @@ h1 {
     border-radius: 10px;
     background-color: #F5F5F5;
     margin-right: 10px;
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
 
 ::-webkit-scrollbar {
     width: 12px;
-    background-color: #F5F5F5;
+    background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -674,8 +676,9 @@ h1 {
     background: #555;
 }
 
-
-/* links */
+html {
+    overflow: hidden;
+}
 
 .font-decor {
     color: #000000;
@@ -706,14 +709,15 @@ h1 {
 
 
 /* Footer Styling */
-footer{
-position: fixed;
-bottom:0;
-width:100%;
-background-color: grey;
-color: white;
-padding: 10px 0px 10px 0px;
-border-top: 1px black solid;
+
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: grey;
+    color: white;
+    padding: 10px 0px 10px 0px;
+    border-top: 1px black solid;
 }
 
 footer {
